; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_modes.c_drm_mode_equal_no_clocks.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_modes.c_drm_mode_equal_no_clocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_display_mode = type { i32 }

@DRM_MODE_MATCH_TIMINGS = common dso_local global i32 0, align 4
@DRM_MODE_MATCH_FLAGS = common dso_local global i32 0, align 4
@DRM_MODE_MATCH_3D_FLAGS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @drm_mode_equal_no_clocks(%struct.drm_display_mode* %0, %struct.drm_display_mode* %1) #0 {
  %3 = alloca %struct.drm_display_mode*, align 8
  %4 = alloca %struct.drm_display_mode*, align 8
  store %struct.drm_display_mode* %0, %struct.drm_display_mode** %3, align 8
  store %struct.drm_display_mode* %1, %struct.drm_display_mode** %4, align 8
  %5 = load %struct.drm_display_mode*, %struct.drm_display_mode** %3, align 8
  %6 = load %struct.drm_display_mode*, %struct.drm_display_mode** %4, align 8
  %7 = load i32, i32* @DRM_MODE_MATCH_TIMINGS, align 4
  %8 = load i32, i32* @DRM_MODE_MATCH_FLAGS, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @DRM_MODE_MATCH_3D_FLAGS, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @drm_mode_match(%struct.drm_display_mode* %5, %struct.drm_display_mode* %6, i32 %11)
  ret i32 %12
}

declare dso_local i32 @drm_mode_match(%struct.drm_display_mode*, %struct.drm_display_mode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
